--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div>
-    <header>header</header>
-    <section>锄禾日当午，汗滴禾下土！</section>
-    <footer>footer</footer>
+    <div id="app">
+
+    </div>
 </div>
 </body>
 </html>
