--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
 </head>
 <body>
 <div>
-    <div id="app">
-
-    </div>
+  <div id="app">
+    <%= htmlWebpackPlugin.options.loading.html %>
+  </div>
 </div>
 </body>
 </html>
